Fixed button text overflow
Greek button text were too big and were overflowing.

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -100,7 +100,7 @@ body
   font-weight: 400
   background: transparent
   text-align: center
-  overflow: hidden
+  overflow: visible
   transition: all .2s ease
   text-decoration: none
   display: block
